style.css
:root {
    --color-primary: #193f6f;
    --color-secondary: #51a749;
    --color-light: #fafafa;
    --color-text-secondary: #777;
    --color-text-footer: #aaa;
    --color-dark: #282828;
}

html, body {
    margin:0;
    padding:0;
    font-size: 0.95em;   
}

body {
    background-color: var(--color-light);
    font-family: 'Roboto', sans-serif;
    display:grid;
    height:100%;
    min-height: 100vh;
    grid-template-rows:auto 1fr 4em;
    color: var(--color-dark);
}

/* Title Font */
h1,h2,h3,h4,h5,h6 {
    font-family: 'Montserrat', sans-serif;
}

/* Header */
header {
    position:sticky;
    top:0;
}
/*======================
        Nav Bar
========================*/
nav {
    background-color: var(--color-light);
    display:flex;
    justify-content: space-between;
    align-items: center;
    box-shadow: 0 0 5px 2px #9995;
}
nav > .logo {
    height:3.5em;
    margin:0.25em 0.5em;
}
nav > .logo > a > img {
    height:100%;
}

nav > .nav-list {
    display:flex;
    flex-direction: row;
    box-sizing: border-box;
    height:100%;
}
nav > .nav-list > li {
    list-style: none;
}
.nav-link {
    box-sizing: border-box;
    cursor: pointer;
    padding: 1em 1.1em;
    margin: 0 0.2em;
    color: var(--color-dark);
    text-decoration: none;
    border-bottom: 3.5px solid var(--color-light); 
    transition: border-color 0.15s ease;
}
.nav-link:hover {
   border-color:var(--color-secondary);
}

.nav-link.btn-secondary {
    border:0;
    margin:0 0.5em;
}

/*======================
        Footer
========================*/
footer {
    background-color: var(--color-dark);
    color:var(--color-text-footer);
    text-align: center;
    display:flex;
    flex-direction: column;
    justify-content: center;
    height:100%;
}
footer > p {
    margin: 0;
}
footer a { 
    color:var(--color-text-footer);
    text-decoration: none;
}

footer a:hover {
    text-decoration: underline;
}

/*======================
        Buttons
========================*/

.btn {
    padding:0.75em 1.2em;
    border-radius: 5px;
    cursor:pointer;
}

.btn-secondary {
    background-color:var(--color-secondary);
    color:var(--color-light) !important;
    transition:background-color 0.2s ease;
}

.btn-secondary:hover {
    background-color:#37962f;
}


/*======================
      Main Section
========================*/

.content, .booth-package-container, .sponsorship-container {
    max-width: 1100px;
    margin: 0 auto;
    padding:1em;
}


.booth-package-container > h1, .sponsorship-container > h1 {
    margin-left:1rem;
}
.booth-package-container > .description, .sponsorship-container > .description {
    margin: 0em 0 1em 1rem;
}

.main h1 {
    font-size: 2em;
}

/*======================
        Title
========================*/
.title {
    background: linear-gradient(#193f6faa, #193f6fee),  url("images/reception.jpg");
    background-size: cover;
    background-position: center;
    height:18em;

    display:flex;
    flex-direction: column;
    justify-content: center;
    text-align: center;
    color: var(--color-light);
}
.title > h1 {
    margin:0.25em 0;
    font-size: 2em;
}


/*======================
        Pricing
========================*/

.price-table {
    margin:0 auto;
    border-spacing: 0.75em;
}
.price-table tr:first-child {
    text-align: right;
}
.pricing p {
    margin:0;
    
}
.pricing .future, .pricing .past {
    color:var(--color-text-secondary);
}

.pricing .past {
    text-decoration: line-through;
    
}
.pricing .current {
    font-weight: 700;
    color: var(--color-secondary);
}

/*======================
     Booth Packages
========================*/

.packages-list {
    display:flex;
    justify-content: space-evenly;
    flex-wrap: wrap;
}

.package {
    min-width: 275px;
    max-width: 275px;
    border-radius: 10px;
    box-shadow: 1px 1px 5px 2px #9995;
    padding:1em 1.3em;
    margin:1em;

    display:flex;
    flex-direction: column;
    justify-content: space-between;
}

.package h2 {
    margin-top:0.5em;
    text-align: center;
}
.package h3 {
    margin:0.5em 0;
}


/*======================
      Sponsorships
========================*/

.sponsorship {
    border-radius: 10px;
    box-shadow: 1px 1px 5px 2px #9995;
    margin:1em;
    padding:1em;
}
.sponsorship > .information {
    display:flex;
    justify-content: space-between;
    flex-wrap: wrap;
}

